engine/auxiliary/input_rustabi/src/input_cabi/bindings.rs

pub const INPUT_EVENT_TYPE_BUTTON_UP: ArgusInputEventType = 1;
pub const INPUT_EVENT_TYPE_AXIS_CHANGED: ArgusInputEventType = 2;
pub type ArgusInputEventType = ::std::os::raw::c_uint;
pub const INPUT_DEV_EVENT_TYPE_GAMEPAD_CONNECTED: ArgusInputDeviceEventType = 0;
pub const INPUT_DEV_EVENT_TYPE_GAMEPAD_DISCONNECTED: ArgusInputDeviceEventType = 1;
pub type ArgusInputDeviceEventType = ::std::os::raw::c_uint;
pub type argus_input_manager_t = *mut ::std::os::raw::c_void;
pub type argus_input_manager_const_t = *const ::std::os::raw::c_void;
pub type argus_text_input_context_t = *mut ::std::os::raw::c_void;
pub type argus_text_input_context_const_t = *const ::std::os::raw::c_void;
extern "C" {
    pub fn argus_get_key_name(scancode: ArgusKeyboardScancode) -> *const ::std::os::raw::c_char;
    pub fn argus_is_key_pressed(scancode: ArgusKeyboardScancode) -> bool;
    pub fn argus_get_connected_gamepad_count() -> u8;
    pub fn argus_get_unattached_gamepad_count() -> u8;
    pub fn argus_get_gamepad_name(gamepad: ArgusHidDeviceId) -> *const ::std::os::raw::c_char;
    pub fn argus_is_gamepad_button_pressed(
        gamepad: ArgusHidDeviceId,
        button: ArgusGamepadButton,
    ) -> bool;
    pub fn argus_get_gamepad_axis(gamepad: ArgusHidDeviceId, axis: ArgusGamepadAxis) -> f64;
    pub fn argus_get_gamepad_axis_delta(gamepad: ArgusHidDeviceId, axis: ArgusGamepadAxis) -> f64;
    pub fn argus_mouse_delta() -> argus_vector_2d_t;
    pub fn argus_mouse_pos() -> argus_vector_2d_t;
    pub fn argus_get_mouse_axis(axis: ArgusMouseAxis) -> f64;
    pub fn argus_get_mouse_axis_delta(axis: ArgusMouseAxis) -> f64;
    pub fn argus_is_mouse_button_pressed(button: ArgusMouseButton) -> bool;
    pub fn argus_controller_get_name(
        controller: argus_controller_const_t,
    ) -> *const ::std::os::raw::c_char;
    pub fn argus_controller_has_gamepad(controller: argus_controller_const_t) -> bool;
    pub fn argus_controller_attach_gamepad(controller: argus_controller_t, id: ArgusHidDeviceId);
    pub fn argus_controller_attach_first_available_gamepad(controller: argus_controller_t) -> bool;
    pub fn argus_controller_detach_gamepad(controller: argus_controller_t);
    pub fn argus_controller_get_gamepad_name(
        controller: argus_controller_const_t,
    ) -> *const ::std::os::raw::c_char;
    pub fn argus_controller_get_deadzone_radius(controller: argus_controller_const_t) -> f64;
    pub fn argus_controller_set_deadzone_radius(controller: argus_controller_t, radius: f64);
    pub fn argus_controller_clear_deadzone_radius(controller: argus_controller_t);
    pub fn argus_controller_get_deadzone_shape(
        controller: argus_controller_const_t,
    ) -> ArgusDeadzoneShape;
    pub fn argus_controller_set_deadzone_shape(
        controller: argus_controller_t,
        shape: ArgusDeadzoneShape,
    );
    pub fn argus_controller_clear_deadzone_shape(controller: argus_controller_t);
    pub fn argus_controller_get_axis_deadzone_radius(
        controller: argus_controller_const_t,
        axis: ArgusGamepadAxis,
    ) -> f64;
    pub fn argus_controller_set_axis_deadzone_radius(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
        radius: f64,
    );
    pub fn argus_controller_clear_axis_deadzone_radius(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
    );
    pub fn argus_controller_get_axis_deadzone_shape(
        controller: argus_controller_const_t,
        axis: ArgusGamepadAxis,
    ) -> ArgusDeadzoneShape;
    pub fn argus_controller_set_axis_deadzone_shape(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
        shape: ArgusDeadzoneShape,
    );
    pub fn argus_controller_clear_axis_deadzone_shape(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
    );
    pub fn argus_controller_unbind_action(
        controller: argus_controller_t,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_get_keyboard_key_bindings_count(
        controller: argus_controller_const_t,
        key: ArgusKeyboardScancode,
    ) -> usize;
    pub fn argus_controller_get_keyboard_key_bindings(
        controller: argus_controller_const_t,
        key: ArgusKeyboardScancode,
        out_bindings: *mut *const ::std::os::raw::c_char,
        count: usize,
    );
    pub fn argus_controller_get_keyboard_action_bindings_count(
        controller: argus_controller_const_t,
        action: *const ::std::os::raw::c_char,
    ) -> usize;
    pub fn argus_controller_get_keyboard_action_bindings(
        controller: argus_controller_const_t,
        action: *const ::std::os::raw::c_char,
        out_scancodes: *mut ArgusKeyboardScancode,
        count: usize,
    );
    pub fn argus_controller_bind_keyboard_key(
        controller: argus_controller_t,
        key: ArgusKeyboardScancode,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_unbind_keyboard_key(
        controller: argus_controller_t,
        key: ArgusKeyboardScancode,
    );
    pub fn argus_controller_unbind_keyboard_key_action(
        controller: argus_controller_t,
        key: ArgusKeyboardScancode,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_bind_mouse_button(
        controller: argus_controller_t,
        button: ArgusMouseButton,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_unbind_mouse_button(
        controller: argus_controller_t,
        button: ArgusMouseButton,
    );
    pub fn argus_controller_unbind_mouse_button_action(
        controller: argus_controller_t,
        button: ArgusMouseButton,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_bind_mouse_axis(
        controller: argus_controller_t,
        axis: ArgusMouseAxis,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_unbind_mouse_axis(controller: argus_controller_t, axis: ArgusMouseAxis);
    pub fn argus_controller_unbind_mouse_axis_action(
        controller: argus_controller_t,
        axis: ArgusMouseAxis,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_bind_gamepad_button(
        controller: argus_controller_t,
        button: ArgusGamepadButton,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_unbind_gamepad_button(
        controller: argus_controller_t,
        button: ArgusGamepadButton,
    );
    pub fn argus_controller_unbind_gamepad_button_action(
        controller: argus_controller_t,
        button: ArgusGamepadButton,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_bind_gamepad_axis(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_unbind_gamepad_axis(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
    );
    pub fn argus_controller_unbind_gamepad_axis_action(
        controller: argus_controller_t,
        axis: ArgusGamepadAxis,
        action: *const ::std::os::raw::c_char,
    );
    pub fn argus_controller_is_gamepad_button_pressed(
        controller: argus_controller_const_t,
        button: ArgusGamepadButton,
    ) -> bool;
    pub fn argus_controller_get_gamepad_axis(
        controller: argus_controller_const_t,
        axis: ArgusGamepadAxis,
    ) -> f64;
    pub fn argus_controller_get_gamepad_axis_delta(
        controller: argus_controller_const_t,
        axis: ArgusGamepadAxis,
    ) -> f64;
    pub fn argus_controller_is_action_pressed(
        controller: argus_controller_const_t,
        action: *const ::std::os::raw::c_char,
    ) -> bool;
    pub fn argus_controller_get_action_axis(
        controller: argus_controller_const_t,
        action: *const ::std::os::raw::c_char,
    ) -> f64;
    pub fn argus_controller_get_action_axis_delta(
        controller: argus_controller_const_t,
        action: *const ::std::os::raw::c_char,
    ) -> f64;
    pub fn argus_input_event_get_input_type(
        event: argus_input_event_const_t,
    ) -> ArgusInputEventType;
    pub fn argus_input_event_get_window(event: argus_input_event_const_t) -> argus_window_const_t;
    pub fn argus_input_event_get_controller_name(
        event: argus_input_event_const_t,
    ) -> *const ::std::os::raw::c_char;
    pub fn argus_input_event_get_action(
        event: argus_input_event_const_t,
    ) -> *const ::std::os::raw::c_char;
    pub fn argus_input_event_get_axis_value(event: argus_input_event_const_t) -> f64;
    pub fn argus_input_event_get_axis_delta(event: argus_input_event_const_t) -> f64;
    pub fn argus_input_device_event_get_device_event(
        event: argus_input_device_event_const_t,
    ) -> ArgusInputDeviceEventType;
    pub fn argus_input_device_event_get_controller_name(
        event: argus_input_device_event_const_t,
    ) -> *const ::std::os::raw::c_char;
    pub fn argus_input_device_event_get_device_id(
        event: argus_input_device_event_const_t,
    ) -> ArgusHidDeviceId;
    pub fn argus_input_manager_get_instance() -> argus_input_manager_t;
    pub fn argus_input_manager_get_controller(
        manager: argus_input_manager_t,
        name: *const ::std::os::raw::c_char,
    ) -> argus_controller_t;
    pub fn argus_input_manager_add_controller(
        manager: argus_input_manager_t,
        name: *const ::std::os::raw::c_char,
    ) -> argus_controller_t;
    pub fn argus_input_manager_remove_controller(
        manager: argus_input_manager_t,
        name: *const ::std::os::raw::c_char,
    );
    pub fn argus_input_manager_get_global_deadzone_radius(
        manager: argus_input_manager_const_t,
    ) -> f64;
    pub fn argus_input_manager_set_global_deadzone_radius(
        manager: argus_input_manager_t,
        radius: f64,
    );
    pub fn argus_input_manager_get_global_deadzone_shape(
        manager: argus_input_manager_const_t,
    ) -> ArgusDeadzoneShape;
    pub fn argus_input_manager_set_global_deadzone_shape(
        manager: argus_input_manager_t,
        shape: ArgusDeadzoneShape,
    );
    pub fn argus_input_manager_get_global_axis_deadzone_radius(
        manager: argus_input_manager_const_t,
        axis: ArgusGamepadAxis,
    ) -> f64;
    pub fn argus_input_manager_set_global_axis_deadzone_radius(
        manager: argus_input_manager_t,
        axis: ArgusGamepadAxis,
        radius: f64,
    );
    pub fn argus_input_manager_clear_global_axis_deadzone_radius(
        manager: argus_input_manager_t,
        axis: ArgusGamepadAxis,
    );
    pub fn argus_input_manager_get_global_axis_deadzone_shape(
        manager: argus_input_manager_const_t,
        axis: ArgusGamepadAxis,
    ) -> ArgusDeadzoneShape;
    pub fn argus_input_manager_set_global_axis_deadzone_shape(
        manager: argus_input_manager_t,
        axis: ArgusGamepadAxis,
        shape: ArgusDeadzoneShape,
    );
    pub fn argus_input_manager_clear_global_axis_deadzone_shape(
        manager: argus_input_manager_t,
        axis: ArgusGamepadAxis,
    );
    pub fn argus_text_input_context_create() -> argus_text_input_context_t;
    pub fn argus_text_input_context_get_current_text(
        context: argus_text_input_context_const_t,
    ) -> *const ::std::os::raw::c_char;
    pub fn argus_text_input_context_activate(context: argus_text_input_context_t);
    pub fn argus_text_input_context_deactivate(context: argus_text_input_context_t);
    pub fn argus_text_input_context_release(context: argus_text_input_context_t);
}
